manifests/bpa/templates/acapy_deployment.yaml
---
# Source: bpa/templates/acapy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pupsi-bpa-acapy
  labels:
    helm.sh/chart: bpa-0.1.0-alpha5.1
    app.kubernetes.io/name: pupsi-bpa-acapy
    app.kubernetes.io/instance: pupsi
    app.kubernetes.io/version: "0.1.0-alpha5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pupsi-bpa-acapy
      app.kubernetes.io/instance: pupsi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pupsi-bpa-acapy
        app.kubernetes.io/instance: pupsi
    spec:
      securityContext:
        {}
      containers:
        - name: acapy
          securityContext:
            runAsUser: 1001
          image: "bcgovimages/aries-cloudagent:py36-1.15-0_0.5.6"
          imagePullPolicy: IfNotPresent
          args: [
           "-c",
           "sleep 15; \
           aca-py start \  
           --arg-file acapy-static-args.yml \   
           --inbound-transport http '0.0.0.0' 8030 \ 
           --webhook-url http://pupsi-bpa-bpacore:80/log \
           --genesis-url 'https://explorer.idu.network/genesis' \
           --endpoint https://pupsi-acapy.stage.economyofthings.io \
           --wallet-storage-type 'postgres_storage' \
           --wallet-name 'mywallet' \
           --wallet-key '123' \
           --wallet-storage-config '{\"url\":\"pupsi-postgresql:5432\",\"max_connections\":5}' \
           --wallet-storage-creds '{\"account\":\"bpa\",\"password\":\"$(POSTGRES_PASSWORD)\",\"admin_account\":\"bpa\",\"admin_password\":\"$(POSTGRES_PASSWORD)\"}' \ 
           --seed 'mdUdFwaVKoOQKEhddMxXU7OCY0YdmyQ2' \
           --admin '0.0.0.0' 8031 \
           --admin-insecure-mode \
           --label ca-aca-py \
           "
          ]
          command:
          - /bin/bash
          ports:
            - name: http
              containerPort: 8030
              protocol: TCP
            - name: admin
              containerPort: 8031
              protocol: TCP              
          volumeMounts:
          - name: config
            mountPath: "/home/indy/acapy-static-args.yml"
            subPath: "acapy-static-args.yml"
            readOnly: true        
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: pupsi-bpa-acapy
            items:
            - key: "acapy-static-args.yaml"
              path: "acapy-static-args.yml"
