manifests/bpa/templates/bpa_deployment.yaml
---
# Source: bpa/templates/bpa_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pupsi-bpa-bpacore
  labels:
    helm.sh/chart: bpa-0.1.0-alpha5.1
    app.kubernetes.io/name: pupsi-bpa-bpacore
    app.kubernetes.io/instance: pupsi
    app.kubernetes.io/version: "0.1.0-alpha5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pupsi-bpa-bpacore
      app.kubernetes.io/instance: pupsi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pupsi-bpa-bpacore
        app.kubernetes.io/instance: pupsi
    spec:
      serviceAccountName: pupsi-bpa-bpacore
      securityContext:
        {}
      containers:
        - name: bpacore
          securityContext:
            {}
          image: "ghcr.io/hyperledger-labs/business-partner-agent:0.1.0-alpha5.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
