manifests/bpa/templates/acapy_service.yaml
---
# Source: bpa/templates/acapy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pupsi-bpa-acapy
  labels:
    helm.sh/chart: bpa-0.1.0-alpha5.1
    app.kubernetes.io/name: pupsi-bpa-acapy
    app.kubernetes.io/instance: pupsi
    app.kubernetes.io/version: "0.1.0-alpha5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8030
      targetPort: http
      protocol: TCP
      name: http
    - port: 8031
      targetPort: admin
      protocol: TCP
      name: admin      
  selector:
    app.kubernetes.io/name: pupsi-bpa-acapy
    app.kubernetes.io/instance: pupsi
